--- a/series/03.md
+++ b/series/03.md
@@ -190,7 +190,11 @@ vMF分布は、多くの点で正規分布と類似している：
 | 指数関数的な減衰 | 指数関数的な減衰（角度に対して） |
 
 > [!NOTE]
-> **条件付きガウスとしての解釈：** vMF分布は、等方的なガウス分布を単位球面上に条件付けた分布として導出できる。すなわち、 $\mathbf{x} \sim N(\boldsymbol{\mu}, \sigma^2 I)$ を $\|\mathbf{x}\| = 1$ に条件付けると、vMF分布に従う（ $\kappa$ は $\|\boldsymbol{\mu}\|/\sigma^2$ に対応）。この関係から「球面上の正規分布」と呼ばれることがあるが、数学的には異なる性質も持つ。
+> **ガウスから誘導される「方向分布」としての解釈：** 等方的なガウス
+> $\mathbf{z} \sim N(\mathbf{m}, \sigma^2 I)$ を考え、方向ベクトル
+> $\mathbf{u}= \frac{\mathbf{z}}{\|\mathbf{z}\|} \in S^{d-1}$ を取ると、 $\mathbf{u}$ は vMF 分布に従う（厳密には「 $\|\mathbf{z}\|=1$ に条件付ける」という表現よりも、「正規分布のサンプルの**方向成分**を見ている」と捉えるのが安全）。
+> このとき、平均方向は $\boldsymbol{\mu}=\frac{\mathbf{m}}{|\mathbf{m}\|}$ 、集中度は $\kappa=\frac{\|\mathbf{m}\|}{\sigma^2}$ に対応する。
+> この関係から「球面上の正規分布」と呼ばれることがあるが、数学的には異なる性質も持つ。
 
 > [!NOTE]
 > **最大エントロピー原理：** vMF分布は、「平均方向 $\mathbb{E}[\mathbf{x}]$ が特定の値を取る」という制約の下で、球面上のエントロピーを最大化する分布として特徴づけられる。この意味で「最も仮定の少ない方向分布」と言えるが、制約なしの最大エントロピー分布（一様分布）とは異なる。
@@ -300,22 +304,29 @@ import torch.nn.functional as F
 def demonstrate_instability():
     """float16での数値不安定性の例"""
     
-    # float16では小さい値がアンダーフローしやすい
-    # float16の最小正規化数は約 6e-5
-    small_fp16 = torch.tensor([1e-5, 1e-5, 1e-5], dtype=torch.float16)
+   # float16では非常に小さい値が0に丸められやすい（アンダーフロー）
+   # min positive normal ≈ 6e-5 なので、それより十分小さい値は 0 になりやすい
+   very_small = torch.finfo(torch.float16).tiny / 1024  # float32では非ゼロ
+   small_fp16 = torch.full((3,), very_small, dtype=torch.float32).half()  # → 0 になりうる
     
     print(f"入力 (float16): {small_fp16}")
     print(f"ノルム: {small_fp16.norm()}")  # 非常に小さい、または0
     
-    # eps なしで正規化すると不安定
-    # （ノルムが0に近いとInfやNaNが発生しうる）
-    norm = small_fp16.norm()
-    if norm < 1e-6:
-        print("Warning: ノルムが非常に小さい → 正規化が不安定")
-    
-    # eps ありで正規化（安全）
-    normalized_safe = F.normalize(small_fp16.float(), eps=1e-12).half()
-    print(f"Safe (eps使用): {normalized_safe}")
+   # eps なしで正規化すると不安定（ノルムが 0 に丸められると NaN/Inf）
+   try:
+       normalized_unsafe = small_fp16 / small_fp16.norm()
+       print(f"Unsafe (epsなし): {normalized_unsafe}")
+   except Exception as e:
+       print(f"Unsafe normalization failed: {e}")
+ 
+   # 実務では「ゼロベクトルが混ざる」ケースも多い（マスクや初期化など）
+   zero_fp16 = torch.zeros(3, dtype=torch.float16)
+   print(f"ゼロ入力 (float16): {zero_fp16}, ノルム: {zero_fp16.norm()}")
+   print(f"ゼロをepsなしで割る: {zero_fp16 / zero_fp16.norm()}")  # NaN が出る
+
+   # 安全策：ノルム計算をfloat32で行い、epsで保護して正規化
+   normalized_safe = F.normalize(small_fp16.float(), eps=1e-12).half()
+   print(f"Safe (eps使用, normはfloat32): {normalized_safe}")
     
     # 勾配計算時にゼロ近傍で問題が起きる例
     x = torch.tensor([1e-7, 1e-7, 1e-7], requires_grad=True)
