--- a/series/06.md
+++ b/series/06.md
@@ -49,6 +49,7 @@ Attention機構の幾何学的解釈
         - LDA：固定されたトピック空間
         - Multi-head：入力ごとに変化する"見方"の集合
 - **RoPE（Rotary Positional Embeddings）の幾何学:**
+    - 天球の回転: 絶対的な位置ではなく、星と星の「角距離（角度の差）」で関係を測る。地球の自転（位置の変化）にかかわらず、北斗七星の形が変わらないように、文の中の相対的な位置関係を「回転」として保存する仕組み。
     - 現代LLM（Llama, Qwen, Mistral等）の標準的な位置埋め込み手法
     - **核心:** 絶対位置ではなく、**回転**によって相対位置を表現
     - Query/Keyベクトルに位置依存の回転行列を適用:
@@ -62,6 +63,41 @@ Attention機構の幾何学的解釈
 - **Self-Attention = 多様体の自己測量（比喩として）:**
     - 入力系列内の各点が、他のすべての点との関係を測る
     - 「どの星とどの星を結ぶべきか」を自動発見
+
+## 一般的な説明との違い
+
+- 一般的な説明: 「Queryは検索クエリ、Keyはインデックス、Valueは内容である（辞書形式のメタファー）」
+- 「答えが元からそこにあるか」か、それとも「観測によって答えが生成されるか」の違い
+
+### 1. 「完全一致」ではなく「空間の重なり」
+
+辞書の検索は、基本的には「AならB」という1対1の対応。
+しかし、TransformerのQとKは、**「どれだけ同じ方向を向いているか（余弦）」**を計算。
+
+- **辞書的:** 「リンゴ」を探して、あればその情報を出す。
+- **測量的:** Qという観測者が「赤くて丸いもの」という方向を向いたとき、空間内のK（トークン）たちがどれだけその視線上に「重なって見えるか」を計算する。
+
+### 2. 辞書にはない「歪み」の許容
+
+辞書は「不正確な検索」に弱いが、測量（Attention）は**「空間がどう歪んでいるか」**を計算に含める。
+たとえば、「彼はペンを持った」と「彼は自信を持った」では、「持った」の意味が違う。
+
+- **辞書的:** 「持った」という項を引くだけ。
+- **測量的:** 周囲のトークンの影響で空間が歪み、QとKの測量結果（内積）が動的に変化する。結果として、同じ単語でも**「観測される座標」が変わる**。
+
+### 3. 「情報の統合」は平均化（加重和）である
+
+辞書は「一つの正解」を取り出すが、Transformerは測量したすべてのKeyの重みに基づいて、Valueを**「混ぜ合わせ（加重和）」**。
+
+測量士の言葉で言えば、**「周囲のあらゆる基準点（トークン）から、自分の今の立ち位置（文脈）を逆算して合成する」**というプロセス。
+辞書のように「これ！」と決めるのではなく、周囲との関係性の総和として自分の意味を定義。
+
+### なぜ「辞書」という説明が広まったのか？
+
+初期のメモリネットワークや、エンジニアにとって馴染み深い「Key-Valueストア」という概念に名前を借りたから。
+しかし、これは理解を助けるための単純化。
+計算実態は $\mathbf{Q}^T \mathbf{K}$ という純粋な線形代数（幾何学）であり、
+これは検索エンジンよりも**「干渉縞の観測」や「測量」に近い振る舞い**。
 
 ## 実装ノート
 
