--- a/series/00.md
+++ b/series/00.md
@@ -5,6 +5,45 @@
 本回は数学的道具の導入であり、特定のモデルへの適用条件はまだ問わない。
 ただし「多様体」「測地線」等の概念を深層学習に適用する際は、各回で改めて「どの条件下で成り立つか」を確認する。
 
+## キーワード
+
+### 空間の構造（多様体論）
+
+空間がどのような「形」をしているかを記述する、本講義の最も基礎となる概念群。
+
+- **多様体** (Manifold): 局所的にはユークリッド空間だが、大域的には異なる構造を持つ空間。
+- 多様体仮説: 高次元データの実質的な構造は、低次元の多様体上に集中しているという仮説。
+- **リーマン多様体**: 距離、角度、曲率を定義するために「リーマン計量」を導入した多様体。ただし計量が当然の前提の話では単に「多様体」とよぶこともある。
+- **曲率** (Curvature): 空間がどれだけ「平ら」から逸脱しているかの指標（正・ゼロ・負）。
+- 次元の呪い/祝福: 高次元空間特有の性質（ランダムなベクトルが直交しやすいなど）。
+
+### 距離と移動（幾何学的操作）
+
+空間内での「近さ」や「動き」を定義・制御するための道具。
+
+- **測地線** (Geodesic): 曲がった空間における局所的な最短経路。
+- **リーマン計量**: 各点での距離や角度を測るための数学的装置。
+- 球面線形補間 (Slerp): 球面上の測地線に沿った自然な補間方法。
+- 平行移動: ベクトルを向きを変えずに移動させる操作（曲がった空間では元の位置に戻ると向きがズレる）。
+
+### 確率と学習（情報幾何学）
+
+幾何学を統計的な推論やニューラルネットワークの学習に結びつける概念。
+
+- 情報幾何学: 確率分布の空間を多様体として扱う学問。
+- フィッシャー情報行列: 確率分布の「変化しやすさ」を反映したリーマン計量。
+- 自然勾配 (Natural Gradient): フィッシャー情報行列を用いて、分布空間での等しい変化量を目指す勾配補正手法。
+- Softmax / Attention: 連続的な値を離散的な確率や重みに変換する「界面」の操作。
+
+### 具体的な空間モデル
+
+幾何学的制約を明示的に設計に取り入れた具体的なモデルや空間の分類。
+
+- 球面 (Positive Curvature): 正の曲率を持つ空間。nGPTやArcFaceなどで利用される。
+- 双曲空間 (Negative Curvature): 負の曲率を持つ空間。階層構造の表現に適している。
+- ユークリッド空間 (Zero Curvature): 古典的な機械学習（PCA、SVMなど）が前提とする平坦な空間。
+- 位相 (Topology): 形ではなく「穴」などの構造を扱う概念（TDAなど）。
+
 ## 導入：なぜ幾何学なのか
 
 深層学習の手法は急速に変化する。2年前の最先端は今日の常識となり、明日には陳腐化するかもしれない。しかし、その背後にある「空間の形」についての問いは、驚くほど普遍的である。
