--- a/series/04.md
+++ b/series/04.md
@@ -169,7 +169,7 @@ $$\nabla \text{LSE}(\mathbf{z}) = \text{softmax}(\mathbf{z}) = \mathbf{p}$$
 
 $$\nabla^2 \text{LSE}(\mathbf{z}) = \text{diag}(\mathbf{p}) - \mathbf{p}\mathbf{p}^\top$$
 
-このヘッセ行列は、Softmax出力 $\mathbf{p}$ の共分散行列と同じ形式である。スペクトルノルムで上から抑えられ、最大固有値は高々 $1/4$ である（ $p_i(1-p_i) \leq 1/4$ より）。この有界性が、勾配のLipschitz連続性を保証し、適切な学習率の設定を可能にしている。
+このヘッセ行列は、Softmax出力 $\mathbf{p}$ の共分散行列と同じ形式である。スペクトルノルムで上から抑えられ、最大固有値は高々 $1/2$ である（例えば $\mathbf{p} = (1/2, 1/2, 0, \ldots, 0)$ のように2クラスに確率が集中したときに達する）。この有界性が、勾配のLipschitz連続性を保証し、適切な学習率の設定を可能にしている。
 
 > [!CAUTION]
 > **深層学習では全体として非凸：** 上記の凸性は「ロジット $\mathbf{z}$ に関して」の話である。深層学習では、ロジットは入力からの非線形変換を経て計算されるため、**パラメータ全体に関しては損失関数は非凸** である。しかし、出力層付近ではこの凸構造が残っており、学習の最終段階での収束を助けている。
