--- a/series/05.md
+++ b/series/05.md
@@ -35,7 +35,10 @@ $$d(\mathbf{x}) = \frac{|\mathbf{w}^\top \mathbf{x} + b|}{\|\mathbf{w}\|}$$
 $$\max_{\mathbf{w}, b} \frac{2}{\|\mathbf{w}\|} \quad \text{subject to} \quad y_i(\mathbf{w}^\top \mathbf{x}_i + b) \geq 1 \quad \forall i$$
 
 > [!NOTE]
-> **ハードマージンとソフトマージン：** 上記の定式化は **ハードマージンSVM** であり、データが完全に線形分離可能であることを前提とする。現実のデータでは分離不可能な場合が多いため、**ソフトマージンSVM** が使われる。ソフトマージンでは、スラック変数 $\xi_i \geq 0$ を導入し、制約を $y_i(\mathbf{w}^\top \mathbf{x}_i + b) \geq 1 - \xi_i$ に緩和する。目的関数は $\min_{\mathbf{w}, b, \boldsymbol{\xi}} \frac{1}{2}\|\mathbf{w}\|^2 + C \sum_i \xi_i$ となり、正則化パラメータ $C$ がマージン最大化（第1項）と誤分類許容（第2項）のトレードオフを制御する。
+> **ハードマージンとソフトマージン：** 上記の定式化は **ハードマージンSVM** であり、データが完全に線形分離可能であることを前提とする。
+> 現実のデータでは分離不可能な場合が多いため、**ソフトマージンSVM** が使われる。
+> ソフトマージンでは、スラック変数 $\xi_i \geq 0$ を導入し、制約を $y_i(\mathbf{w}^{\top} \mathbf{x} _i + b) \geq 1 - \xi _i$ に緩和する。
+> 目的関数は $\min _{\mathbf{w}, b, \boldsymbol{\xi}} \frac{1}{2}\|\mathbf{w}\|^2 + C \sum_i \xi_i$ となり、正則化パラメータ $C$ がマージン最大化（第1項）と誤分類許容（第2項）のトレードオフを制御する。
 
 ### なぜマージン最大化が有効か
 
