[skip ci] updated

--- a/series/06.md
+++ b/series/06.md
@@ -175,11 +175,11 @@ Self-Attentionは、入力の順序を区別しない。「犬が猫を追いか
 初期のTransformer（Vaswani et al., 2017）は、正弦波による**絶対位置埋め込み**を使った。しかし、近年の大規模言語モデル（Llama, Qwen, Mistral等）では、**RoPE（Rotary Position Embedding）**が広く採用されている。
 
 > [!NOTE]
-> **位置埋め込みの多様性：** RoPEは近年の多くのLLMで採用されているが、唯一の選択肢ではない。ALiBi（Press et al., 2022）のように、Attention重みに位置依存のバイアスを加える方式も実用されている。最適な位置埋め込みはタスクやモデル設計に依存する。
+> **位置埋め込みの多様性：** RoPEは近年の多くのLLMで採用されているが、唯一の選択肢ではない。ALiBi（Press et al., 2022）のように、Attention重みに位置依存のバイアスを加える方式の採用例もある。最適な位置埋め込みはタスクやモデル設計に依存する。
 
 ### RoPEの核心：回転による相対位置
 
-RoPE（Su et al., 2021/2024）の核心的アイデアは、位置を**回転**として表現することである。
+RoPE（Su et al., 2021）の核心的アイデアは、位置を**回転**として表現することである。
 
 Query と Key のベクトルに、位置依存の回転行列を適用する：
 
@@ -241,7 +241,7 @@ $$\text{softmax}\left(\frac{\mathbf{Q} \mathbf{K}^\top}{\sqrt{d_k}}\right)$$
 
 $\sqrt{d_k}$ によるスケーリングは、**主に内積の分散を安定化するため**に導入された（Vaswani et al., 2017）。$d_k$ が大きいと、内積の値も大きくなりやすく、Softmaxが極端に鋭くなって勾配が消失する問題がある。$\sqrt{d_k}$ で割ることで、次元に関わらず内積のスケールを揃える。
 
-結果として、このスケーリングはSoftmaxの鋭さ（実効的な温度）にも影響する。スケーリング係数が小さいと分布は鋭くなり、大きいと平坦になる。
+結果として、このスケーリングはSoftmaxの鋭さ（実効的な温度）にも影響する。$d_k$ が大きいモデルでは $\sqrt{d_k}$ による除算が大きくなり、Softmaxへの入力が抑えられて分布は相対的に平坦になる。
 
 天体観測メタファーで言えば、**望遠鏡の倍率を調整**するようなものだ。高倍率（低温）では、最も明るい星だけが見える。低倍率（高温）では、微かな光も拾い上げられる。
 
