[skip ci] updated

--- a/series/06.md
+++ b/series/06.md
@@ -78,6 +78,9 @@ $$\text{Attention}(\mathbf{Q}, \mathbf{K}, \mathbf{V}) = \text{softmax}\left(\fr
 > [!IMPORTANT]
 > **標準TransformerとL2正規化の違い：** 標準Transformerでは、LayerNormやRMSNormが使われるが、これらは **平均・分散の正規化** であり、ベクトルを単位ノルムにする **L2正規化とは異なる**。したがって、 $\mathbf{Q}^\top \mathbf{K}$ は純粋な角度情報（ $\cos\theta$ ）ではなく、**方向と大きさの両方の影響を受ける**。
 
+> [!NOTE]
+> **高次元でのLayerNormの挙動：** ただし、高次元空間においてLayerNormを適用されたベクトルは、確率的に「ある程度の範囲のノルムに集中する」傾向がある（高次元の集中現象の一種）。そのため、標準Attentionでも「実質的には角度に近いものを見ている」という近似的解釈は、現場の直感としては完全に間違いではない。本資料では厳密な区別を維持しつつ、角度的な見方を正規化設計への導線として位置づけている。
+
 ### 球面解釈が成り立つ条件
 
 「Attentionは角度を計算している」という解釈は、特定の条件下でのみ厳密に成り立つ。
