--- a/series/11.md
+++ b/series/11.md
@@ -39,6 +39,7 @@
 - **具体例: ImageBind (Meta):**
     - 6つのモダリティを単一の埋め込み空間に
     - でも本当に「統一」されているのか、それとも「無理やり並べた」だけなのか？
+- CLIPの限界とその後の展開についても述べる
 
 ## 問い
 
