--- a/series/07.md
+++ b/series/07.md
@@ -2,8 +2,8 @@
 
 ## 注意事項
 
-- $\kappa$（集中度）を「確信度」として解釈できるのは、埋め込みをvMF分布として明示的にモデル化した場合に限られる。
-- 単に $L_2$ 正規化して $\cos$ 類似度を使うだけでは、$\kappa$ は自動的には得られない（点埋め込みに「霧」はない）。
+- $\kappa$ （集中度）を「確信度」として解釈できるのは、埋め込みをvMF分布として明示的にモデル化した場合に限られる。
+- 単に $L_2$ 正規化して $\cos$ 類似度を使うだけでは、 $\kappa$ は自動的には得られない（点埋め込みに「霧」はない）。
 - エントロピーの近似式 $H \approx -\log \kappa$ は、高次元・高 $\kappa$ の条件下での近似であり、一般には成り立たない。
 - 本回で扱う「分布埋め込み」は、標準的な深層学習ではまだ主流ではない。しかし、不確実性を扱う設計の重要性は増しており、将来の標準になる可能性がある。
 
@@ -43,7 +43,7 @@
 この分離を実現するのが、**方向分布**の導入である。特に、単位球面上の方向分布として**von Mises-Fisher（vMF）分布**が有力な選択肢となる。
 
 > [!IMPORTANT]
-> **設計としての分離：** この「意味と確信度の分離」は、データから自動的に得られるものではない。vMF分布を使い、$\kappa$（集中度）を明示的に学習する設計を採用して初めて実現する。単に $L_2$ 正規化するだけでは、点埋め込みのままであり、不確実性は表現されない。
+> **設計としての分離：** この「意味と確信度の分離」は、データから自動的に得られるものではない。vMF分布を使い、 $\kappa$ （集中度）を明示的に学習する設計を採用して初めて実現する。単に $L_2$ 正規化するだけでは、点埋め込みのままであり、不確実性は表現されない。
 
 ## von Mises-Fisher分布：球面上のガウス分布
 
@@ -57,10 +57,10 @@ $$p(\mathbf{x} \mid \boldsymbol{\mu}, \kappa) = C_d(\kappa) \exp(\kappa \boldsym
 
 ここで：
 
-- $\mathbf{x} \in \mathbb{S}^{d-1}$：観測される方向（単位ベクトル）
-- $\boldsymbol{\mu} \in \mathbb{S}^{d-1}$：平均方向（分布の「中心」）
-- $\kappa \geq 0$：集中度パラメータ
-- $C_d(\kappa)$：正規化定数（Bessel関数を含む）
+- $\mathbf{x} \in \mathbb{S}^{d-1}$ ：観測される方向（単位ベクトル）
+- $\boldsymbol{\mu} \in \mathbb{S}^{d-1}$ ：平均方向（分布の「中心」）
+- $\kappa \geq 0$ ：集中度パラメータ
+- $C_d(\kappa)$ ：正規化定数（Bessel関数を含む）
 
 ### $\kappa$ の直感的理解
 
@@ -75,8 +75,8 @@ $\kappa$ は、分布がどれだけ平均方向 $\boldsymbol{\mu}$ の周りに
 
 プラネタリウムのメタファーで言えば：
 
-- 大きい $\kappa$：「あの星座しか見えない」（晴れた夜空、高確信）
-- 小さい $\kappa$：「複数の星座が重なって見える」（霧の夜、低確信）
+- 大きい $\kappa$ ：「あの星座しか見えない」（晴れた夜空、高確信）
+- 小さい $\kappa$ ：「複数の星座が重なって見える」（霧の夜、低確信）
 
 > [!NOTE]
 > **vMF分布とガウス分布の関係：** 高次元の単位球面上で $\kappa$ が十分大きい場合、vMF分布は接空間上のガウス分布に近似できる。これは、地球の表面が局所的に平面に見えるのと同じ原理である。
@@ -91,7 +91,7 @@ $$C_d(\kappa) = \frac{\kappa^{d/2 - 1}}{(2\pi)^{d/2} I_{d/2 - 1}(\kappa)}$$
 
 この複雑さが、vMF分布の実装上の困難の源である。特に：
 
-- Bessel関数の数値計算は、$\kappa$ が大きいときにオーバーフローしやすい
+- Bessel関数の数値計算は、 $\kappa$ が大きいときにオーバーフローしやすい
 - 勾配計算には Bessel 関数の比が現れ、数値的に不安定になりうる
 
 > [!CAUTION]
@@ -103,7 +103,7 @@ $$C_d(\kappa) = \frac{\kappa^{d/2 - 1}}{(2\pi)^{d/2} I_{d/2 - 1}(\kappa)}$$
 
 分布の「ぼやけ具合」を定量化する自然な方法は、**エントロピー**である。エントロピーが高いほど、分布は広がっており、不確実性が高い。
 
-vMF分布のエントロピー $H$ は、$\kappa$ と次元 $d$ の関数として表される：
+vMF分布のエントロピー $H$ は、 $\kappa$ と次元 $d$ の関数として表される：
 
 $$H = -\log C_d(\kappa) - \kappa \cdot A_d(\kappa)$$
 
@@ -115,25 +115,25 @@ $$H = -\log C_d(\kappa) - \kappa \cdot A_d(\kappa)$$
 
 $$H \approx -\log \kappa + \text{const.}$$
 
-これは、**高次元かつ高 $\kappa$** という条件下での近似であり、一般には成り立たない。
+これは、**高次元かつ高** $\kappa$ **という条件下**での近似であり、一般には成り立たない。
 
 | 条件 | 近似の妥当性 |
 | --- | --- |
-| 高次元（$d \gg 1$）、高 $\kappa$（$\kappa \gg 1$） | 良い近似 |
-| 低次元（$d$ が小さい） | 近似が崩れる |
-| 低 $\kappa$（$\kappa \approx 0$） | 近似が崩れる |
+| 高次元（ $d \gg 1$ ）、高 $\kappa$ （ $\kappa \gg 1$ ） | 良い近似 |
+| 低次元（ $d$ が小さい） | 近似が崩れる |
+| 低 $\kappa$ （ $\kappa \approx 0$ ） | 近似が崩れる |
 
 > [!IMPORTANT]
-> **教育的簡略化の注意：** 「$\kappa$ が大きいほど集中（低不確実性）」という定性的な理解は正しい。しかし、「$H \approx -\log \kappa$」という定量的な式を使う場合は、適用条件を確認すること。
+> **教育的簡略化の注意：** 「 $\kappa$ が大きいほど集中（低不確実性）」という定性的な理解は正しい。しかし、「 $H \approx -\log \kappa$ 」という定量的な式を使う場合は、適用条件を確認すること。
 
 ### 確信度としての $\kappa$
 
-実用上、$\kappa$ を「確信度」として直接使うことが多い。この解釈が有効なのは：
+実用上、 $\kappa$ を「確信度」として直接使うことが多い。この解釈が有効なのは：
 
-1. **vMF分布を明示的にモデル化している場合**：埋め込みを点ではなく分布として学習し、$\kappa$ をパラメータとして推定している
-2. **$\kappa$ の推定が安定している場合**：学習データが十分にあり、$\kappa$ の推定値が信頼できる
+1. **vMF分布を明示的にモデル化している場合**：埋め込みを点ではなく分布として学習し、 $\kappa$ をパラメータとして推定している
+2. $\kappa$ **の推定が安定している場合**：学習データが十分にあり、 $\kappa$ の推定値が信頼できる
 
-単に $L_2$ 正規化しただけの点埋め込みでは、$\kappa$ に相当する量は存在しない。「確信度」を持つためには、設計段階で分布表現を採用する必要がある。
+単に $L_2$ 正規化しただけの点埋め込みでは、 $\kappa$ に相当する量は存在しない。「確信度」を持つためには、設計段階で分布表現を採用する必要がある。
 
 ## Out-of-Distribution（OOD）検知
 
@@ -176,7 +176,7 @@ $$H \approx -\log \kappa + \text{const.}$$
 
 分布表現を採用すれば、ハルシネーションに対する幾何学的な対策が可能になる。
 
-**閾値ベースの抑制**：$\kappa$ が閾値以下の場合、出力を控える（「分かりません」と答える）。
+**閾値ベースの抑制**： $\kappa$ が閾値以下の場合、出力を控える（「分かりません」と答える）。
 
 $$\text{if } \kappa < \kappa_{\text{threshold}} \text{: output "I don't know"}$$
 
@@ -205,7 +205,7 @@ $$\min_R \|X R - Y\|_F^2 \quad \text{subject to } R^\top R = I$$
 
 ### $\kappa$ による座標フリーの比較
 
-分布表現を採用し、$\kappa$ のような**回転不変量**を使えば、座標系に依存しない比較が可能になる場合がある。
+分布表現を採用し、 $\kappa$ のような**回転不変量**を使えば、座標系に依存しない比較が可能になる場合がある。
 
 | 比較対象 | 座標依存 | $\kappa$ 依存 |
 | --- | --- | --- |
@@ -216,7 +216,7 @@ $$\min_R \|X R - Y\|_F^2 \quad \text{subject to } R^\top R = I$$
 **具体例**：「言語Aで『犬』の確信度」と「言語Bで『dog』の確信度」を比較したい場合、座標系を合わせなくても、それぞれの $\kappa$ を比較できる。
 
 > [!NOTE]
-> **限定的な解放：** これは万能の解決策ではない。意味的な対応関係（「犬」と「dog」が同じ概念を指す）を知るには、依然として何らかの整列が必要である。$\kappa$ で比較できるのは、確信度のような**スカラー量**に限られる。
+> **限定的な解放：** これは万能の解決策ではない。意味的な対応関係（「犬」と「dog」が同じ概念を指す）を知るには、依然として何らかの整列が必要である。 $\kappa$ で比較できるのは、確信度のような**スカラー量**に限られる。
 
 ## 分布埋め込みの学習
 
@@ -224,13 +224,13 @@ $$\min_R \|X R - Y\|_F^2 \quad \text{subject to } R^\top R = I$$
 
 分布埋め込みを学習するには、モデルが点ではなく分布のパラメータを出力する必要がある。
 
-**vMF出力層**：通常の埋め込み層の代わりに、$(\boldsymbol{\mu}, \kappa)$ を出力する層を使う。
+**vMF出力層**：通常の埋め込み層の代わりに、 $(\boldsymbol{\mu}, \kappa)$ を出力する層を使う。
 
-```
+```txt
 入力 → エンコーダ → [μ, log κ] → vMF分布
 ```
 
-ここで $\log \kappa$ を出力するのは、$\kappa > 0$ の制約を自然に満たすためである。
+ここで $\log \kappa$ を出力するのは、 $\kappa > 0$ の制約を自然に満たすためである。
 
 **損失関数の設計**：分布間の距離を測る損失関数が必要。KLダイバージェンス、期待コサイン類似度、あるいは対照学習の変種が使われる。
 
@@ -238,7 +238,7 @@ $$\min_R \|X R - Y\|_F^2 \quad \text{subject to } R^\top R = I$$
 
 分布埋め込みの学習には、点埋め込みにはない課題がある。
 
-**$\kappa$ の崩壊**：学習が進むと、すべての $\kappa$ が極端に大きくなり（点に収束）、不確実性の情報が失われることがある。正則化や事前分布で対処する。
+$\kappa$ **の崩壊**：学習が進むと、すべての $\kappa$ が極端に大きくなり（点に収束）、不確実性の情報が失われることがある。正則化や事前分布で対処する。
 
 **サンプリングの分散**：損失関数の計算にサンプリングが必要な場合、勾配の分散が大きくなりやすい。Reparameterization Trickの球面版が必要。
 
@@ -248,6 +248,7 @@ $$\min_R \|X R - Y\|_F^2 \quad \text{subject to } R^\top R = I$$
 
 > [!NOTE]
 > 以下のコードは PyTorch >= 1.9 を前提とする。vMF関連の実装について：
+>
 > - **サンプリング**：Wood's algorithmに基づく実装を示す
 > - **KL・正規化定数**：高κ・高次元での漸近近似を使用。κが小さい領域では誤差が大きくなる可能性があるため、厳密計算が必要な場合はscipy.special.ive等を使用すること
 
@@ -519,6 +520,7 @@ kl_divergence_vmf = kl_divergence_vmf_approx
 
 > [!IMPORTANT]
 > **κ閾値によるOOD検知は、必ず校正（calibration）が必要。** モデルが出力するκは、学習データやアーキテクチャに依存し、そのままでは「確率的に正しい確信度」を表さないことが多い。運用前に検証セットで以下を行うこと：
+>
 > - 閾値の選定（Precision-Recallトレードオフの確認）
 > - 温度スケーリング等によるκの校正
 > - 分布内/分布外のκ分布の可視化
@@ -730,7 +732,7 @@ visualize_attention_with_uncertainty(sentence, attention, kappa)
 この可視化は、以下を示している：
 
 1. **Attentionの分布**：どの単語がどの単語に注目しているか
-2. **確信度の違い**：「quantum」のような専門用語は低い $\kappa$（赤系）、「The」「sat」のような一般的な単語は高い $\kappa$（緑系）
+2. **確信度の違い**：「quantum」のような専門用語は低い $\kappa$ （赤系）、「The」「sat」のような一般的な単語は高い $\kappa$ （緑系）
 
 > [!NOTE]
 > **Multi-headでの拡張：** 実際のTransformerでは、複数のヘッドがそれぞれ異なるAttentionパターンを学習する。各ヘッドに対応する「確信度」を可視化することで、どのヘッドがどの種類の関係を確信を持って捉えているかを分析できる。
@@ -740,7 +742,7 @@ visualize_attention_with_uncertainty(sentence, attention, kappa)
 | 概念 | 定義 | 本回での役割 |
 | --- | --- | --- |
 | **vMF分布** | 単位球面上の方向分布 | 分布埋め込みの基礎 |
-| **$\kappa$（集中度）** | 分布の集中の度合い | 確信度の定量化 |
+| $\kappa$ （**集中度**） | 分布の集中の度合い | 確信度の定量化 |
 | **分布埋め込み** | 点ではなく分布としての表現 | 不確実性の明示的モデル化 |
 | **OOD検知** | 分布外入力の検出 | 低 $\kappa$ 領域の活用 |
 | **ハルシネーション** | 低確信度での誤った生成 | $\kappa$ 閾値による抑制 |
@@ -750,7 +752,7 @@ visualize_attention_with_uncertainty(sentence, attention, kappa)
 
 点埋め込みから分布埋め込みへの移行は、単なる技術的な拡張ではない。**「分かりません」と言える能力**をモデルに与えるという、質的な変化である。
 
-ただし、この能力は**設計によって獲得される**ものであり、自動的には得られない。$L_2$ 正規化しただけでは点は点のままであり、$\kappa$ のような確信度パラメータは存在しない。vMF分布（または他の方向分布）を明示的にモデル化し、$\kappa$ を学習する設計を採用して初めて、不確実性を扱える表現が得られる。
+ただし、この能力は**設計によって獲得される**ものであり、自動的には得られない。 $L_2$ 正規化しただけでは点は点のままであり、 $\kappa$ のような確信度パラメータは存在しない。vMF分布（または他の方向分布）を明示的にモデル化し、 $\kappa$ を学習する設計を採用して初めて、不確実性を扱える表現が得られる。
 
 プラネタリウムのメタファーで言えば：
 
