--- a/series/07.md
+++ b/series/07.md
@@ -764,7 +764,7 @@ visualize_attention_with_uncertainty(sentence, attention, kappa)
 
 ### 分布埋め込みとvMF分布
 
-- Nagata, K., Suresh, K., & Takamura, H. (2023). Variance Matters: Detecting Semantic Differences without Corpus/Word Alignment. *EMNLP 2023*. arXiv: [arXiv:2310.01345](https://arxiv.org/abs/2310.01345).
+- [Nagata, K., Suresh, K., & Takamura, H. (2023). Variance Matters: Detecting Semantic Differences without Corpus/Word Alignment. *EMNLP 2023*](https://aclanthology.org/2023.emnlp-main.965/).
     - 本回の中心的な参考文献。埋め込みの分散が意味の違いを検出する上で重要であることを示した。
 
 - Mardia, K. V., & Jupp, P. E. (2000). *Directional Statistics*. Wiley Series in Probability and Statistics. Wiley.
