[skip ci] updated
**1. Augmented Neural ODEsの説明（新規セクション）**
- ODEの解の一意性による制約（軌道が交差できない）を説明
- 同心円分類問題の具体例（ASCIIアート付き）
- 次元拡張による解決策と「2次元で結び目を解くには3次元が必要」という直感的説明
- 参考文献に既にあるDupont et al. (2019)と整合

**2. 随伴法のNOTEを拡張**
- 箇条書きで問題点を明確化：
  - 数値的不安定性（順方向で安定→逆方向で不安定）
  - 誤差の蓄積
  - チェックポイント併用の実態
- 「通常の逆伝播（Backprop through time）の方が精度が出る場合がある」という実務上の知見を追記

--- a/series/08.md
+++ b/series/08.md
@@ -169,7 +169,12 @@ $$\frac{d\mathbf{h}}{dt} = f(\mathbf{h}, t, \theta)$$
 **メモリ効率（理論上）**：順伝播で中間状態を保存する必要がない。逆伝播は「随伴法（adjoint method）」により、随伴方程式を解くことで計算できる（実装では逆時間方向での数値積分や再計算を伴う）。
 
 > [!NOTE]
-> **実運用上のトレードオフ：** 随伴法は「中間状態を全保存しない」設計が可能という意味でメモリ効率が良い。ただし、逆向きに解く際の数値誤差や不安定性が問題になる場合があり、実装によってはチェックポイント保存を併用することもある。「常にメモリ得」とは限らず、速度・安定性・誤差とのトレードオフがある。
+> **実運用上のトレードオフ：** 随伴法は「中間状態を全保存しない」設計が可能という意味でメモリ効率が良い。ただし、以下の問題がある：
+> - **数値的不安定性**：随伴法は逆時間方向にODEを解くため、順方向で安定だった軌道が逆方向では不安定（発散しやすい）になることがある
+> - **誤差の蓄積**：逆向き積分中の数値誤差が勾配の精度を低下させる
+> - **チェックポイント併用**：安定性のため、結局中間状態を一部保存するケースも多い
+> 
+> 実務では、メモリを消費しても**通常の逆伝播（Backprop through time）の方が精度が出る**場合がある。メモリと精度のトレードオフを考慮して手法を選択する必要がある。
 
 **適応的な計算**：数値積分器（Runge-Kutta法など）が、精度に応じてステップ数を自動調整する。ベクトル場が急峻な領域や剛性（stiffness）が高い軌道では、誤差制御のためにステップ数が増加する。逆に、滑らかな領域では少ないステップで済む。
 
@@ -184,6 +189,27 @@ $$\frac{d\mathbf{h}}{dt} = f(\mathbf{h}, t, \theta)$$
 ```
 
 $f$ はニューラルネットワークで表現され、$\theta$ はその学習パラメータ。ODEソルバーが、$t=0$ から $t=T$ まで状態を積分する。
+
+### Neural ODEの表現力の限界とAugmented Neural ODEs
+
+Neural ODEには重要な制約がある。ODEの解は連続で、異なる初期条件から出発した軌道は交差しない（解の一意性）。これは、**トポロジー的に表現できない関数が存在する**ことを意味する。
+
+典型的な例は、同心円状に配置された2クラスの分類問題である。内側の円と外側の円を分離するには、軌道が「交差」する必要があるが、ODEではこれができない。
+
+```
+    外側クラス: ○ ○ ○
+              ○     ○
+    内側クラス:   ● ●
+              ○  ●  ○
+              ○     ○
+              ○ ○ ○
+```
+
+**Augmented Neural ODEs**（Dupont et al., 2019）は、この制約を回避するために**状態空間の次元を拡張**する。入力を高次元空間に持ち上げることで、元の空間では交差するように見える軌道も、拡張された空間では交差しないように配置できる。
+
+$$\mathbf{h}_{\text{aug}} = [\mathbf{h}, \mathbf{0}] \in \mathbb{R}^{d + d'}$$
+
+これは、2次元で結び目を解くには3次元が必要、という直感と同じである。
 
 > [!NOTE]
 > **計算コストのトレードオフ：** Neural ODEはメモリ効率が良いが、計算時間は増加しうる。特に、$f$ の評価回数（ODEソルバーのステップ数）が多くなると、標準的なResNetより遅くなる場合がある。
