--- a/exercise/02.md
+++ b/exercise/02.md
@@ -8,7 +8,7 @@
 
 **解答:**
 
-```python
+```02_distance_concentration.py
 import numpy as np
 import matplotlib.pyplot as plt
 
@@ -35,7 +35,7 @@ print(f"Mean: {np.mean(distances):.2f}, Std: {np.std(distances):.2f}")
 
 **解答:**
 
-```python
+```02_angle_concentration.py
 angles = []
 for _ in range(1000):
     x = np.random.randn(100)
