--- a/exercise/12.md
+++ b/exercise/12.md
@@ -13,7 +13,7 @@
 | ユークリッド | $2\pi r$ | 6.28 | 18.8 | 31.4 |
 | 双曲 | $2\pi \sinh(r)$ | 7.38 | 62.8 | 466 |
 
-```python
+```12_hyperbolic_circumference.py
 import numpy as np
 
 for r in [1, 3, 5]:
