--- a/exercise/15.md
+++ b/exercise/15.md
@@ -51,7 +51,7 @@
 
 **実装の骨子:**
 
-```python
+```15_adaptive_curvature_layer.py
 class AdaptiveCurvatureLayer(nn.Module):
     def __init__(self, dim):
         self.kappa = nn.Parameter(torch.zeros(1))  # 学習可能な曲率
