--- a/exercise/04.md
+++ b/exercise/04.md
@@ -8,7 +8,7 @@ Softmax関数の温度パラメータ $\tau$ を0.1, 1.0, 10.0と変化させた
 
 **解答:**
 
-```python
+```04_softmax_temperature.py
 import numpy as np
 
 def softmax(z, tau):
